--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "",
   "devDependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.4",
     "@types/chrome": "^0.0.278",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
@@ -30,5 +33,8 @@
     "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0",
     "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "assorted-vanillajs": "^1.0.1"
   }
 }
