--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "assorted-vanillajs": "^1.0.1"
+    "assorted-vanillajs": "^1.0.1",
+    "prism-react-editor": "^1.1.0"
   }
 }
