--- a/.github/workflows/build-zip.yaml
+++ b/.github/workflows/build-zip.yaml
@@ -30,18 +30,24 @@ jobs:
         with:
           name: chrome-extension
           path: dist
-  create-release:
-    needs: build-on-linux
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: chrome-extension
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: chrome-extension.zip
+          files: dist/**
           token: ${{ secrets.GITHUB_TOKEN }}
+  # create-release:
+  #   needs: build-on-linux
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Download artifact
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: chrome-extension
+  #     - name: Release
+  #       uses: softprops/action-gh-release@v2
+  #       if: startsWith(github.ref, 'refs/tags/')
+  #       with:
+  #         files: chrome-extension.zip
+  #         token: ${{ secrets.GITHUB_TOKEN }}
