--- a/.github/workflows/build-zip.yaml
+++ b/.github/workflows/build-zip.yaml
@@ -21,11 +21,15 @@ jobs:
         with:
           path: ~/.npm
           key: deps-node-modules-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            deps-node-modules-
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm install
       - name: Build
         run: npm run build
+      - name: Verify Build Output
+        run: ls -la dist
       - uses: actions/upload-artifact@v4
         with:
           name: chrome-extension
