--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Custom Script Injector",
   "description": "Extension to inject scripts into whatever web page",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "manifest_version": 3,
   "icons": {
     "16": "icon.png",
@@ -13,7 +13,7 @@
     "default_title": "React Extension",
     "default_icon": "icon.png"
   },
-  "permissions": ["storage", "userScripts", "unlimitedStorage"],
+  "permissions": ["storage", "userScripts", "unlimitedStorage", "activeTab"],
   "optional_host_permissions": ["<all_urls>"],
   "options_page": "options.html",
   "background": {
