--- a/.github/workflows/build-zip.yaml
+++ b/.github/workflows/build-zip.yaml
@@ -15,31 +15,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: deps-node-modules-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            deps-node-modules-
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm install
+      - run: npm install
       - name: Build
         run: npm run build
-      - name: Verify Build Output
-        run: ls -la dist
       - uses: actions/upload-artifact@v4
         with:
           name: chrome-extension
           path: dist
-      - name: Release
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: dist/**
-          token: ${{ secrets.GITHUB_TOKEN }}
   # create-release:
   #   needs: build-on-linux
   #   runs-on: ubuntu-latest
